deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storm-production
  labels:
    name: storm-production
    environment: production
